--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "highlightjs": "^9.12.0",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
     "sequelize": "^4.42.0"
