--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/jrmoore117/Placeholder#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "highlightjs": "^9.12.0",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.42.0"
   }
 }
